--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -57,6 +57,15 @@ spec:
     excludeIPRanges: ""
     excludeInboundPorts: ""
     excludeOutboundPorts: ""
+  proxyInit:
+    image: "gcr.io/istio-release/proxyv2:1.10.0"
+    resources:
+      limits:
+        cpu: 2000m
+        memory: 1024Mi
+      requests:
+        cpu: 10m
+        memory: 10Mi
   sds:
     tokenAudience: "istio-ca"
   proxyWasm:
