Add priorityClassName to ICP spec

--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -71,6 +71,7 @@ spec:
   proxyWasm:
     enabled: false
   watchOneNamespace: false
+  priorityClassName: ""
   meshConfig:
     proxyListenPort: 15001
     connectTimeout: 10s
