--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -2111,6 +2111,15 @@ spec:
                   certs for Pilot and workloads.
                 nullable: true
                 type: boolean
+              priorityClassName:
+                description: |-
+                  Prior to Kubernetes v1.17.0 it was not allowed to use the system-cluster-critical and system-node-critical
+                  PriorityClass outside of the kube-system namespace, so it is advised to create your own PriorityClass
+                  and use its name here
+                  On Kubernetes >=v1.17.0 it is possible to configure system-cluster-critical and
+                  system-node-critical PriorityClass in order to make sure your Istio pods
+                  will not be killed because of low priority class.
+                type: string
               proxy:
                 description: Proxy configuration options.
                 properties:
