--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -72,6 +72,8 @@ spec:
     enabled: false
   watchOneNamespace: false
   priorityClassName: ""
+  defaultPodDisruptionBudget:
+    enabled: true
   meshConfig:
     proxyListenPort: 15001
     connectTimeout: 10s
