--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -77,6 +77,7 @@ spec:
   defaultPodDisruptionBudget:
     enabled: true
   imagePullPolicy: ""
+  jwtPolicy: "third-party-jwt"
   meshConfig:
     proxyListenPort: 15001
     connectTimeout: 10s
