--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -78,6 +78,7 @@ spec:
     enabled: true
   imagePullPolicy: ""
   jwtPolicy: "third-party-jwt"
+  caAddress: ""
   meshConfig:
     proxyListenPort: 15001
     connectTimeout: 10s
