Add HTTPProxyEnvs to ICP spec

--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -72,6 +72,17 @@ spec:
                       resources required.
                     type: object
                 type: object
+              httpProxyEnvs:
+                description: Upstream HTTP proxy properties to be injected as environment
+                  variables to the pod containers.
+                properties:
+                  httpProxy:
+                    type: string
+                  httpsProxy:
+                    type: string
+                  noProxy:
+                    type: string
+                type: object
               imagePullPolicy:
                 description: ImagePullPolicy describes a policy for if/when to pull
                   a container image.
