Add imagePullSecrets to ICP spec

--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -77,6 +77,7 @@ spec:
   defaultPodDisruptionBudget:
     enabled: true
   imagePullPolicy: ""
+  imagePullSecrets: []
   jwtPolicy: "third-party-jwt"
   caAddress: ""
   httpProxyEnvs:
