--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -92,6 +92,16 @@ spec:
                 - Never
                 - IfNotPresent
                 type: string
+              imagePullSecrets:
+                description: ImagePullSecrets is an optional list of references to
+                  secrets to use for pulling any of the images.
+                items:
+                  properties:
+                    name:
+                      description: Name of the referent.
+                      type: string
+                  type: object
+                type: array
               istiod:
                 description: Istiod configuration.
                 properties:
