--- a/docs/federation/flat/rbac.yml
+++ b/docs/federation/flat/rbac.yml
@@ -159,7 +159,7 @@ rules:
   verbs:
   - '*'
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: istio-operator
